fix: resolve SonarQube maintainability code smells across CLI, config, git providers, k8s client and tools
Addresses the maintainability findings from the PR-541 SonarQube analysis
(RuntimeException/S112 findings intentionally excluded, per agreement).

Key changes:
- DeploymentContext: switch boxed Boolean getters to primitive boolean,
  fixing S5411 unboxing risks across ~15 call sites in one place.
- K8sClientHelper.findApiResourceViaDiscovery: split into focused helper
  methods to bring cognitive complexity from 61 down to allowed levels.
- Deduplicate repeated string literals into named constants throughout
  (ContentLoader, K8sClient, Jenkins, Monitoring, destroy handlers, etc.).
- Replace raw generics, unnecessary casts, Collectors.toList() ->
  toList(), and merge switch case labels using comma syntax.
- Remove genuinely unused fields/params (CertManager, Ingress,
  ExternalSecretsOperator k8sClient; ScmManagerApiClient credentials).
- Replace deprecated NetworkingUtils.getHost/getProtocol usage with
  java.net.URI-based implementation in ScmTenantSchema.

Left unchanged, by design:
- S107 (too many parameters) on Deployer/DeploymentStrategy/HelmStrategy/
  Jenkins would require an invasive DTO refactor across 14 callers.
- S106 on CLI stdout output (--version, --output-config-file) and
  CommandExecutor's tee streams: intentional stdout/stderr behavior,
  not accidental logging.
- S3011 reflection accessibility in GenerateJsonSchema: inherent to the
  schema/doc generator's field introspection.
- S115 VaultMode enum casing (dev/prod): renaming would break the
  public config/CLI contract documented in configuration.schema.json.

Co-Authored-By: Claude <noreply@anthropic.com>